2014-04-17  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c: Minor fixes.

2014-04-14  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: Hack for unexpected behavior of GDI+ in reading animation
	  GIF frames is improved.

2014-04-13  Araki Ken  <arakiken@users.sf.net>

	* gdiplus.cpp, c_anim.gif: Hack for unexpected behavior of GDI+ in reading
	  animation GIF frames is added.

	* x_picture.c, c_imagelib.c: Minor fixes.

2014-04-12  Araki Ken  <arakiken@users.sf.net>

	* c_anim.gif, c_imagelib.c: If gdk_pixbuf_new_from() reads a GIF
	  Animation frame whose width and height are smaller than those of the
	  first frame, it resizes appropriately. (gdk_pixbuf_new_from_file()
	  ignores the logical width and height in the GIF header.)

	* x_picture.c: If it fails to load an animation gif frame, skip it.

2014-04-11  Araki Ken  <arakiken@users.sf.net>

	* x_display.c, MLActivity.java, c_animgif.c, c_imagelib.c, gdiplus.cpp,
	  x_picture.c: ~/.mlterm/anim.gif => ~/.mlterm/anim%d.gif to support
	  asynchronous loading.

2014-04-10  Araki Ken  <arakiken@users.sf.net>

	* x_picture.[ch]: It is possible to load GIF files asynchronously.

	* MLActivity.java: Minor fixes.

2014-04-09  Araki Ken  <arakiken@users.sf.net>

	* x_event_source.c: update_ime_text() and x_display_idling() are called
	  in idling.

2014-04-07  Araki Ken  <arakiken@users.sf.net>

	* MLActivity.java, x_display.c: The failure of animating gif images downloaded
	  from remote hosts on Android is fixed.

	* c_animgif.c: The processing of dispose method is fixed.

2014-04-06  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c, c_animgif.c: ~/.mlterm/anim%d.gif => ~/.mlterm/anim.gif

	* c_animgif.c: Separated from c_imagelib.c.

	* android/jni/x_display.c, android/jni/x_event_source.c, MLActivity.java:
	  Animation GIF is supported on Android.

2014-04-05  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c, x_screen.[ch]: Waiting between animation frames is