@@ -1,3 +1,8 @@
+2014-04-22  Araki Ken  <arakiken@users.sf.net>
+
+	* x_event_source.c, xlib/x_display.c: Pending events in the event queue
+	  is read before select().
+
 2014-04-17  Araki Ken  <arakiken@users.sf.net>
 
 	* x_picture.c: Minor fixes.
